--- a/src/front/sass/components/_masthead.scss
+++ b/src/front/sass/components/_masthead.scss
@@ -3,8 +3,6 @@
         position: relative;
         margin-left: auto;
         margin-right: auto;
-        // padding-right: 15px;
-        // padding-left: 15px;
         padding-top: 0;
         padding-bottom: 0;
     }
@@ -33,11 +31,11 @@
         padding-left: 15px;
     }
 }
-// @media (min-width: 1200px) {
-//     #masthead .container {
-//         width: 1140px;
-//         max-width: 100%;
-//         padding-right: 15px;
-//         padding-left: 15px;
-//     }
-// }
+@media (min-width: 1200px) {
+    #masthead .container {
+        width: 1140px;
+        max-width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
